--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-amap": "^1.2.7",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
