--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.4.1",
     "react-amap": "^1.2.7",
     "react-dom": "^16.4.1",
+    "react-image-file": "^0.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4"
   },
